# prompt-safety-scraper-

./: .gitignore  LICENSE  README.md  extract_rules.py  prompt_template.md  pyproject.toml  scrape_prompt_repos.py
tests/: test_parser.py
