[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prompt-safety-scraper"
version = "0.1.0"
description = "Scrape AI system prompt repos for security-related keywords."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.7.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "PT", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.pyright]
typeCheckingMode = "standard"
include = ["src"]
